Converting simple translation table items to use {{t}} <maximum#24269621>

--- a/en/m/maximum.34063.wikitext
+++ b/en/m/maximum.34063.wikitext
@@ -52,7 +52,7 @@ French from {{etyl|la|en}} ''[[#Latin|maximum]]''.
 * Romanian: {{t|ro|maximum}}
 * Russian: {{t+|ru|максимум|m|tr=máksimum}}
 * Spanish: {{t+|es|máximo}}
-* Telugu: [[గరిష్ఠం]] (garishThaM)
+* Telugu: {{t|te|గరిష్ఠం|tr=garishThaM}}
 * Welsh: {{t+|cy|uchafswm}}
 {{trans-bottom}}
 
@@ -67,7 +67,7 @@ French from {{etyl|la|en}} ''[[#Latin|maximum]]''.
 * Persian: {{t+|fa|بیشینه|tr=bišine|sc=fa-Arab}}, {{t+|fa|ماکسیمم|tr=mâksimom|sc=fa-Arab}}
 * Russian: {{t+|ru|максимум|m|tr=máksimum}}
 * Spanish: {{t+|es|máximo}}
-* Telugu: [[గరిష్ఠం]] (garishThaM)
+* Telugu: {{t|te|గరిష్ఠం|tr=garishThaM}}
 {{trans-bottom}}
 
 {{trans-top|statistics: largest value of a batch}}
@@ -96,7 +96,7 @@ French from {{etyl|la|en}} ''[[#Latin|maximum]]''.
 * Japanese: {{t+|ja|最大|tr=さいだい, saidai|sc=Jpan}}, {{t|ja|極大|tr=きょくだい, kyokudai|sc=Jpan}}
 * Russian: {{t+|ru|максимальный|tr=maksimálʹnyj|sc=Cyrl}}
 * Spanish: {{t+|es|máximo}}
-* Telugu: [[గరిష్ఠ]] (garishTha)
+* Telugu: {{t|te|గరిష్ఠ|tr=garishTha}}
 * Turkish: {{t+|tr|maksimum}}
 {{trans-bottom}}
 
