Converting simple translation table items to use {{t}} <at#24270356>

--- a/en/a/at.3964.wikitext
+++ b/en/a/at.3964.wikitext
@@ -116,7 +116,7 @@ From {{etyl|enm|en}} {{term|at|lang=enm}}, from {{etyl|ang|en}} {{term|æt||at, 
 *: ''At home'' = hemma
 *: ''At work'' = på jobbet
 *: ''At the table'' = vid bordet
-* Telugu: [[వద్ద]] (vadda)
+* Telugu: {{t|te|వద్ద|tr=vadda}}
 * Thai: {{t+|th|ณ|tr=nā|sc=Thai}}
 * Tok Pisin: {{t|tpi|long}}
 * Turkish: {{t+|tr|-da}}, {{t+|tr|-de}}
