--- a/en/u/ungratefulness.742233.wikitext
+++ b/en/u/ungratefulness.742233.wikitext
@@ -6,6 +6,9 @@
 {{en-noun|-}}
 # The state of being [[ungrateful]].
 
+====Translations====
+{{trans-see||ingratitude}}
+
 [[el:ungratefulness]]
 [[ko:ungratefulness]]
 [[io:ungratefulness]]
