--- a/en/b/bound.6799.wikitext
+++ b/en/b/bound.6799.wikitext
@@ -185,8 +185,9 @@ From {{etyl|fr|en}} {{term|bondir||to leap, bound, originally make a loud resoun
 * Dutch: {{t+|nl|sprong}}
 * Finnish: {{t+|fi|hyppy}}, {{t+|fi|loikka}}
 * French: {{t+|fr|bond|f}}, {{t+|fr|saut|m}}
-{{trans-mid}}
 * German: {{t+|de|Sprung|m}}
+{{trans-mid}}
+* Greek: {{t+|el|άλμα|n}}
 * Italian: {{t+|it|salto|m}}, {{t|it|balzo|m}}
 * Russian: {{t+|ru|прыжок|m|tr=pryžók|sc=Cyrl}}, {{t+|ru|скачок|m|tr=skačók|sc=Cyrl}}
 * Scottish Gaelic: {{t|gd|leum|m}}
