--- a/en/s/simple.7363.wikitext
+++ b/en/s/simple.7363.wikitext
@@ -14,19 +14,22 @@ From {{etyl|enm|en}} {{term|simple|lang=enm}}, from {{etyl|fro|en}} and {{etyl|f
 {{en-adj|er}}
 
 # [[uncomplicated|Uncomplicated]]; taken by itself, with nothing added.
+#*{{quote-book|year=1910|author={{w|Emerson Hough}}
+|title=[http://www.gutenberg.org/ebooks/11593 The Purchase Price]|chapter=1
+|passage=“[…] We are engaged in a great work, a treatise on our river fortifications, perhaps ? But since when did army officers afford the luxury of amanuenses in this '''simple''' republic ?{{...}}”}}
 #* '''2001''', Sydney I. Landau, ''Dictionaries: The Art and Craft of Lexicography'', Cambridge University Press (ISBN 0-521-78512-X), page 167,
 #*: There is no '''simple''' way to define precisely a complex arrangement  of parts, however homely the object may appear to be.
 # Without [[ornamentation]]; [[plain]].
 # Free from [[duplicity]]; [[guileless]], [[innocent]], [[straightforward]].
-#* Marston
+#* {{w|John Marston (poet)|John Marston}} (ca.1576-1634)
 #*: Full many fine men go upon my score, as '''simple''' as I stand here, and I trust them.
-#* Byron
+#* {{w|Lord Byron}} (1788-1824)
 #*: Must thou trust Tradition's '''simple''' tongue?
-#* Emerson
+#* {{w|Ralph Waldo Emerson}} (1803-1882)
 #*: To be '''simple''' is to be great.
 # [[undistinguished|Undistinguished]] in social condition; of no special [[rank]].
 # {{context|now|_|rare|lang=en}} [[trivial|Trivial]]; [[insignificant]].
-#* '''1485''', Thomas Malory, ''Le Morte Darthur'', Book X:
+#* '''1485''', {{w|Thomas Malory}}, ''{{w|Le Morte d'Arthur}}'', Book X:
 #*: ‘That was a '''symple''' cause,’ seyde Sir Trystram, ‘for to sle a good knyght for seyynge well by his maystir.’
 # {{context|now|_|colloquial|lang=en}} Feeble-minded; [[foolish]].
 # {{context|chemistry|lang=en}} Consisting of one [[single]] substance; [[uncompounded]].
@@ -36,8 +39,8 @@ From {{etyl|enm|en}} {{term|simple|lang=enm}}, from {{etyl|fro|en}} and {{etyl|f
 #: ''a '''simple''' ascidian''
 # {{cx|mineralogy|lang=en}} [[homogenous]]
 # {{cx|obsolete|lang=en}} Mere; not other than; being only.
-#* Shakespeare
-#*: A medicine {{...}} whose '''simple''' touch / Is powerful to araise King Pepin.
+#* {{w|William Shakespeare}} (1564-1616)
+#*: A medicine{{...}}whose '''simple''' touch / Is powerful to araise King Pepin.
 
 ====Synonyms====
 * {{sense|consisting of a single part or aspect}} [[onefold]]
