/* Usage notes */ <bet#24331042>

--- a/en/b/bet.6795.wikitext
+++ b/en/b/bet.6795.wikitext
@@ -246,6 +246,10 @@ From {{etyl|bat-pro|lv}} {{term/t|bat-pro|*bet}}, from {{etyl|ine-pro|lv}} {{ter
 ===Usage notes===
 {{etyl|lv|-}} {{term|bet|lang=lv}} is to some extent a "false friend" of {{etyl|en|-}} {{term|but|lang=lv}}, since it is used not only in adversative (''but'') contexts, but also in certain additive  (''and'') contexts, when there is the idea of contrast (''while...'') between two situations, very much like {{etyl|ru|-}} {{term|а|lang=ru}}: {{term|es|lang=lv}} {{term|strādāju|lang=lv}}, '''{{term|bet|lang=lv}}''' {{term|mana|lang=lv}} {{term|sieva|lang=lv}} {{term|lasa|lang=lv}} {{term|grāmatu|lang=lv}} “I am working, '''and''' (= while) my wife is reading a book” ([[cf]]. {{etyl|ru|-}} ''[[я]] [[работать|работаю]], '''[[а]]''' [[моя]] [[жена]] [[читать|читает]] [[книга|книгу]]).
 
+===Synonyms===
+* {{l/lv|taču}}
+* {{l/lv|tomēr}}
+
 ===References===
 <references />
 
