/* Usage notes */ <bet#24331771>

--- a/en/b/bet.6795.wikitext
+++ b/en/b/bet.6795.wikitext
@@ -244,7 +244,7 @@ From {{etyl|bat-pro|lv}} {{term/t|bat-pro|*bet}}, from {{etyl|ine-pro|lv}} {{ter
 #: ''tas jau slikti nebūtu, sieviņ, bet ir viens '''bet''''' — that wouldn't be bad, wifey, but there is one “'''but'''”...
 
 ====Usage notes====
-{{etyl|lv|-}} {{term|bet|lang=lv}} is to some extent a "false friend" of {{etyl|en|-}} {{term|but|lang=lv}}, since it is used not only in adversative (''but'') contexts, but also in certain additive  (''and'') contexts, when there is the idea of contrast (''while...'') between two situations, very much like {{etyl|ru|-}} {{term|а|lang=ru}}: {{term|es|lang=lv}} {{term|strādāju|lang=lv}}, '''{{term|bet|lang=lv}}''' {{term|mana|lang=lv}} {{term|sieva|lang=lv}} {{term|lasa|lang=lv}} {{term|grāmatu|lang=lv}} “I am working, '''and''' (= while) my wife is reading a book” ([[cf]]. {{etyl|ru|-}} ''[[я]] [[работать|работаю]], '''[[а]]''' [[моя]] [[жена]] [[читать|читает]] [[книга|книгу]]). A more strongly adversative word, used to stress contrast, contradiction, or inconsistency, is {{term|taču|lang=lv}}, which would correspond to {{etyl|ru|-}} {{term|но|lang=ru}}.
+{{etyl|lv|-}} {{term|bet|lang=lv}} is to some extent a "false friend" of {{etyl|en|-}} {{term|but|lang=lv}}, since it is used not only in adversative (''but'') contexts, but also in certain additive  (''and'') contexts, when there is the idea of contrast (''while...'') between two situations, very much like {{etyl|ru|-}} {{term|а|lang=ru}}: {{term|es|lang=lv}} {{term|strādāju|lang=lv}}, '''{{term|bet|lang=lv}}''' {{term|mana|lang=lv}} {{term|sieva|lang=lv}} {{term|lasa|lang=lv}} {{term|grāmatu|lang=lv}} “I am working, '''and''' (= while) my wife is reading a book” ([[cf]]. {{etyl|ru|-}} ''[[я]] [[работать|работаю]], '''[[а]]''' [[моя]] [[жена]] [[читать|читает]] [[книга|книгу]]''). A more strongly adversative word, used to stress contrast, contradiction, or inconsistency, is {{term|taču|lang=lv}}, which would correspond to {{etyl|ru|-}} {{term|но|lang=ru}}.
 
 ====Synonyms====
 * {{l/lv|taču}}
