--- a/en/b/bend.6792.wikitext
+++ b/en/b/bend.6792.wikitext
@@ -285,7 +285,7 @@ From {{etyl|enm|en}} {{term|benden|lang=enm}}, from {{etyl|ang|en}} {{term|benda
 ==Albanian==
 
 ===Etymology===
-From {{etyl|ine-pro|sq}} {{term/t|ine-pro|*band}} 'drop'. Probably connected to Illyrian [[Bindus]] 'a deity of water'. Also compare Phrygian {{term|βεδυ||water|lang=xpg}}, Latin [[Fons Bandusiae]], Cornish {{term|banne|lang=kw}}, {{term|banna||drop|lang=kw}}, Middle Irish {{term|banna|lang=mga}}, {{term|baina||drop|lang=mga}} and Sanskrit {{term|||drop|tr=bindú-ḥ|lang=sa}}<ref>“Indogermanisches Etymologisches Wörterbuch”, J. Pokorny, 1959, Bern : Francke </ref>.
+From {{etyl|ine-pro|sq}} {{term/t|ine-pro|*band}} 'drop'. Probably connected to Illyrian [[Bindus]] 'a deity of water'. Also compare Phrygian {{term|βεδυ||water|lang=xpg}}, Latin [[Fons Bandusiae]], Middle Irish {{term|banna|lang=mga}}, {{term|baina||drop|lang=mga}} and Sanskrit {{term|||drop|tr=bindú-ḥ|lang=sa}}<ref>“Indogermanisches Etymologisches Wörterbuch”, J. Pokorny, 1959, Bern : Francke </ref>.
 
 ===Noun===
 {{sq-noun|g=m}}
