t+pt:[[segunda vinda]] ([[WT:EDIT|Assisted]]) <second coming#24390289>

--- a/en/s/second coming.746616.wikitext
+++ b/en/s/second coming.746616.wikitext
@@ -19,4 +19,5 @@
 * Finnish: {{t|fi|toinen tuleminen}}
 {{trans-mid}}
 * Greek: {{t|el|Δευτέρα Παρουσία}}
+* Portuguese: {{t|pt|segunda vinda|f}}
 {{trans-bottom}}
