--- a/en/w/West Frisian.741118.wikitext
+++ b/en/w/West Frisian.741118.wikitext
@@ -11,7 +11,7 @@
 {{en-proper noun}}
 
 # A language spoken mostly in the province of [[Friesland]], in the north of the Netherlands; [[West Lauwers Frisian]], one of the three West Frisian languages (or language varieties).
-# {{rfc-sense}} {{context|Netherlands|lang=en}} A [[dialect]] spoken in [[West Friesland]] in the province of [[North Holland]], historically related to the language spoken in [[Friesland]].
+# {{rfc-sense}} {{context|in the Netherlands|lang=en}} A [[dialect]] spoken in [[West Friesland]] in the province of [[North Holland]], historically related to the language spoken in [[Friesland]].
 
 ====Usage notes====
 * The lects West Frisian, Saterland Frisian, and North Frisian are sometimes considered dialects of a single Frisian language, but more often they are considered a group of three independent languages.
