--- a/en/v/vexingly.775495.wikitext
+++ b/en/v/vexingly.775495.wikitext
@@ -1,11 +1,9 @@
 ==English==
 
 ===Adverb===
-'''vexingly'''
+{{en-adv}}
 
 # In a [[vexing]] manner.
-
-[[Category:English adverbs]]
 
 [[ko:vexingly]]
 [[io:vexingly]]
