--- a/en/m/minimum.34064.wikitext
+++ b/en/m/minimum.34064.wikitext
@@ -59,6 +59,7 @@ From {{etyl|la|en}} {{term|minimus||lang=la|least, smallest}}
 * Japanese: {{t+|ja|最小|tr=さいしょう, saishō|sc=Jpan}}, {{t+|ja|最低|tr=さいてい, saitei|sc=Jpan}}, {{t|ja|極小|tr=きょくしょう, kyokushō|sc=Jpan}}
 * Latin: {{t|la|minimum}}
 * Persian: {{t+|fa|حداقل|tr=hadd-e-aqall|sc=fa-Arab}}, {{t|fa|مینیمم|tr=minimom|sc=fa-Arab}}
+* Portuguese: {{t+|pt|mínimo|m}}
 * Romanian: {{t|ro|minimum}}
 * Russian: {{t+|ru|минимум|m|tr=mínimum}}
 * Spanish: {{t+|es|mínimo}}
@@ -81,6 +82,7 @@ From {{etyl|la|en}} {{term|minimus||lang=la|least, smallest}}
 {{trans-mid}}
 * German: {{t+|de|minimal}}
 * Japanese: {{t+|ja|最小|tr=さいしょう, saishō|sc=Jpan}}, {{t+|ja|最低|tr=さいてい, saitei|sc=Jpan}}, {{t|ja|極小|tr=きょくしょう, kyokushō|sc=Jpan}}
+* Portuguese: {{t+|pt|mínimo}}
 * Russian: {{t+|ru|минимальный|tr=minimálʹnyj|sc=Cyrl}}
 {{trans-bottom}}
 
