/* Adverb */ rhyming quotations <again#24480494>

--- a/en/a/again.4310.wikitext
+++ b/en/a/again.4310.wikitext
@@ -44,8 +44,10 @@ From {{etyl|enm|en}} {{term|again|lang=enm}}, {{term|ayain|lang=enm}}, {{term|an
 #* {{quote-book|year=1913|author={{w|Joseph C. Lincoln}}|chapter=1
 |title=[http://openlibrary.org/works/OL5535161W Mr. Pratt's Patients]|chapter=1
 |passage=Thinks I to myself, &ldquo;Sol, you're run off your course again. This is a rich man's summer &lsquo;cottage&rsquo;&nbsp;[&hellip;].&rdquo; So I started to back away '''again''' into the bushes. But I hadn't backed more'n a couple of yards when I see something so amazing that I couldn't help scooching down behind the bayberries and looking at it.}}
+#* '''1931''', Robert L. May, ''Rudolph'', ''The Red-Nosed Reindeer'', Montgomery Ward (publisher):
+#*: He tangled in tree-tops '''again''' and '''again'''<!--,--> / And barely missed hitting a tri-motored plane.
 #* '''1979''', Charles Edward Daniels et al., “The Devil Went Down to Georgia” (song), ''Million Mile Reflections'', Charlie Daniels Band, Epic Records:
-#*: Johnny said, “Devil, just come on back if you ever want to try '''again'''.”
+#*: Johnny said, “Devil, just come on back if you ever want to try '''again'''<!--.--> / I done told you once, you son of a bitch, I’m the best that’s ever been.”
 #* '''2010''', Simon Hattenstone, ''The Guardian'', 30 Oct 2010:
 #*: The last sentence is so shocking, I have to read it '''again'''.
 # Over and above a factor of one. {{defdate|from 16th c.}}
