/* Translations */+vec <leather#24490832>

--- a/en/l/leather.4309.wikitext
+++ b/en/l/leather.4309.wikitext
@@ -57,8 +57,8 @@ From {{etyl|enm|en}} {{term|lether|lang=enm}}, from {{etyl|ang|en}} {{term|leþe
 * Ido: {{t+|io|ledro}}
 * Indonesian: {{t+|id|kulit}}
 * Irish: {{t|ga|leathar|m}}
-{{trans-mid}}
 * Italian: {{t+|it|cuoio|m}}
+{{trans-mid}}
 * Japanese: {{t+|ja|皮|tr=かわ, kawa}}
 * Korean: {{t+|ko|가죽|tr=gajuk}}
 * Latin: {{t|la|cutis|f}}
@@ -84,6 +84,7 @@ From {{etyl|enm|en}} {{term|lether|lang=enm}}, from {{etyl|ang|en}} {{term|leþe
 * Swedish: {{t+|sv|läder|n}}
 * Thai: {{t|th|หนัง|tr=năng}}
 * Turkish: {{t+|tr|deri}}
+* Venetian: {{t+|vec|curame|m}}, {{t+|vec|curam|m}}, {{t|vec|corame|m}}
 * Vietnamese: {{t+|vi|da thuộc}}
 * Walloon: {{t+|wa|cur|m}}
 * Zulu: {{t+|zu|isikhumba|c7|c8}}
