--- a/en/c/cauliflower.34088.wikitext
+++ b/en/c/cauliflower.34088.wikitext
@@ -15,7 +15,7 @@ From 16th century {{term|cole-florye|lang=en}}. Compare Latin {{term|caulis|lang
 ===Noun===
 {{en-noun}}
 
-# {{taxlink|Brassica oleracea var. botrytis|variety}}, an annual variety of [[cabbage]], of which the cluster of young flower stalks and buds is eaten as a vegetable.
+# {{taxlink|Brassica oleracea var. botrytis|variety|noshow=1}}, an annual variety of [[cabbage]], of which the cluster of young flower stalks and buds is eaten as a vegetable.
 # The edible head or [[curd]] of a cauliflower plant.
 
 ====Derived terms====
