--- a/en/f/ferret.8237.wikitext
+++ b/en/f/ferret.8237.wikitext
@@ -13,7 +13,7 @@
 {{en-noun}}
 
 # An often domesticated [[mammal]] rather like a [[weasel]], descended from the [[polecat]] and often trained to [[hunt]] [[burrow]]ing animals.
-# The [[black-footed ferret]], {{taxlink|Mustela nigripes|species}}.
+# The {{vern|black-footed ferret}}, {{taxlink|Mustela nigripes|species|noshow=1}}.
 # A [[diligent]] [[searcher]].
 
 =====Synonyms=====
