--- a/en/q/quadruped.4320.wikitext
+++ b/en/q/quadruped.4320.wikitext
@@ -17,6 +17,7 @@ From {{etyl|fr|en}} {{term|quadrupède|lang=fr}}, from {{etyl|frm|en}}, from {{e
 * Armenian: {{t|hy|չորքոտանի|sc=Armn}}
 * Chinese:
 *: Mandarin: {{t|cmn|四足動物|sc=Hani}}, {{t|cmn|四足动物|tr=sìzú dòngwù|sc=Hani}} {{qualifier|animal}}, {{t|cmn|四足類|sc=Hani}}, {{t|cmn|四足类|tr=sìzúlèi|sc=Hani}}
+* Danish: {{t|da|[[firbenet]] [[dyr]]}}
 * Dutch: {{t|nl|viervoeter|m}}
 * Finnish: {{t|fi|nelijalkainen}}
 * French: {{t+|fr|quadrupède|m}}, {{t+|fr|tétrapode|m}}
