--- a/en/d/division.26256.wikitext
+++ b/en/d/division.26256.wikitext
@@ -44,6 +44,8 @@ From {{etyl|fro|en}} {{term|division|lang=fro}}, from {{etyl|la|en}} {{term|divi
 * [[dividend]]
 * [[divisive]]
 * [[divisor]]
+* [[divisible]]
+* [[divisibility]]
 * [[÷]]
 * [[/]]
 
@@ -51,9 +53,8 @@ From {{etyl|fro|en}} {{term|division|lang=fro}}, from {{etyl|la|en}} {{term|divi
 * [[split]]
 
 ====Antonyms====
-* [[fusion]]（combine two or more things into one thing）
-* [[merger]]（combine two or more things into one thing）
-* [[multiplication]]（calculate times of a number）
+* {{sense|making of one thing into two or more things}} [[combination]], [[fusion]], [[merger]], [[unification]]
+* {{sense|arithmetic: calculation of the quotient}} [[multiplication]]
 
 ====Translations====
 {{trans-top|act or process of dividing anything}}
