--- a/en/r/reassertion.741527.wikitext
+++ b/en/r/reassertion.741527.wikitext
@@ -10,7 +10,9 @@
 
 ====Translations====
 {{trans-top|the act of reasserting; a second or subsequent assertion}}
+* Manx: {{t|gv|aahickyraghey|m}}
 {{trans-mid}}
+* Spanish: {{t+|es|reafirmación|f}}
 {{trans-bottom}}
 
 [[et:reassertion]]
