--- a/en/y/yeah.4305.wikitext
+++ b/en/y/yeah.4305.wikitext
@@ -81,7 +81,7 @@ Alternative etymology derives ''yeah'' from a drawling pronunciation of {{term|y
 
 Alternate spelling with exclamation point
 used to separate yeah used as an agreement ( Yeah, I understand. ) 
-Yea!
+'''Yea!'''
 # Expressing [[joy]], [[celebration]], [[glee]], etc.
 #: '''Yea!''' We did it!''
 
