reduce duplication <Zacharias#24580630>

--- a/en/z/Zacharias.855854.wikitext
+++ b/en/z/Zacharias.855854.wikitext
@@ -1,26 +1,16 @@
 ==English==
 
 ===Etymology===
-From the New Testament Greek form of the figure's name in the Old Testament, {{term|||tr=...|Yahweh has remembered|lang=he}}. Compare [[Zachariah]] and [[Zechariah]].
+From {{etyl|grc|en}} {{term|Ζαχαρίας|lang=grc}}, the New Testament form of the figure's name in the Old Testament, {{etyl|he|en}} {{term|זְכַרְיָה||tr=Zəḵaryā|Yahweh has remembered|lang=he}}. Compare [[Zachariah]] and [[Zechariah]].
 
 ===Proper noun===
 {{en-proper noun}}
 
-# The father of [[John the Baptist]]. {{qualifier|biblical character}} 
+# {{alternative form of|Zechariah|lang=en}}
 # {{given name|male|from=Hebrew}}.
 
 ====Translations====
-{{trans-top|father of John the Baptist}}
-* Danish: {{t|da|Zakarias}}
-* Finnish: {{t|fi|Sakarias}}
-* French: {{t|fr|Zacharie}}
-* German: {{t+|de|Zacharias}}
-{{trans-mid}}
-* Hawaiian: {{t|haw|Zakaria}}
-* Norwegian: {{t|no|Sakarja}}
-* Swedish: {{t|sv|Sakarias}}
-{{trans-bottom}}
-
+{{trans-see|Zechariah}}
 {{trans-see|male given name|Zachary}}
 
 [[Category:en:Biblical characters]]
