--- a/en/i/Ionia.775850.wikitext
+++ b/en/i/Ionia.775850.wikitext
@@ -8,6 +8,7 @@ From {{etyl|grc|en}} '''[[Ἰωνία]]'''.
 {{en-proper noun}}
 
 # {{context|historical|lang=en}} An Ancient Greek settlement on the west coast of [[Asia Minor]] inhabited by the [[Ionian]]s, one of the four main [[Hellenic]] tribes.
+# A [[city]] in [[Michigan]].
 
 ====Translations====
 {{trans-top|(historical) Ancient Greek settlement}}
