--- a/en/s/safety catch.776062.wikitext
+++ b/en/s/safety catch.776062.wikitext
@@ -7,9 +7,9 @@
 
 ====Translations====
 {{trans-top|safety catch}}
-* Greek: {{t+|el|ασφάλεια|f|tr=asfáleia}}
+* Greek: {{t+|el|ασφάλεια|f}}
 {{trans-mid}}
-* Russian: {{t+|ru|предохранитель|m|sc=Cyrl|tr=predoxranítel'}}
+* Russian: {{t+|ru|предохрани́тель|m|sc=Cyrl}}
 {{trans-bottom}}
 
 [[ku:safety catch]]
