[[Category:British English forms]] <sabre-toothed tiger#24690972>

--- a/en/s/sabre-toothed tiger.801837.wikitext
+++ b/en/s/sabre-toothed tiger.801837.wikitext
@@ -36,6 +36,7 @@
 ===Anagrams===
 * [[saber-toothed tiger#English|saber-toothed tiger]]
 
+[[Category:British English forms]]
 [[Category:en:Cats]]
 [[Category:en:Mammals]]
 
