--- a/en/g/good Lord.741512.wikitext
+++ b/en/g/good Lord.741512.wikitext
@@ -13,7 +13,7 @@
 *: Mandarin: {{t+|cmn|天哪|tr=tiān'na|sc=Hani}}
 {{trans-mid}}
 * Finnish: {{t+|fi|herranjestas}},  {{t|fi|jestas sentään}}
-* French: {{t+|fr|Seigneur}}, {{t+|fr|mon Dieu}}, {{t+|fr|ciel}}, {{t+|fr|nom de Dieu}}
+* French: {{t+|fr|Seigneur}}, {{t+|fr|mon Dieu}}, {{t+|fr|ciel}}, {{t+|fr|nom de Dieu}}, {{t+|fr|nom de bleu}} {{qualifier|Switzerland}}
 {{trans-bottom}}
 
 ====Synonyms====
