/* English */ <mallee fowl#24693571>

--- a/en/m/mallee fowl.745831.wikitext
+++ b/en/m/mallee fowl.745831.wikitext
@@ -1,5 +1,8 @@
 ==English==
 {{wikipedia}}
+===Alternative forms===
+*[[malleefowl]]
+
 ===Noun===
 {{en-noun|mallee fowl|head=[[mallee]] [[fowl]]}}
 
