/* Noun */ <mallee fowl#24693606>

--- a/en/m/mallee fowl.745831.wikitext
+++ b/en/m/mallee fowl.745831.wikitext
@@ -4,7 +4,7 @@
 *[[malleefowl]]
 
 ===Noun===
-{{en-noun|mallee fowl|head=[[mallee]] [[fowl]]}}
+{{en-noun|s|mallee fowl|head=[[mallee]] [[fowl]]}}
 
 # An Australian ground-dwelling bird, ''[[Leipoa ocellata]]'', in the [[megapode]] family.
 #*'''1985''', {{w|Peter Carey}}, ''Illywhacker'', Faber and Faber 2003, p. 401:
