--- a/en/m/metrication.720326.wikitext
+++ b/en/m/metrication.720326.wikitext
@@ -5,6 +5,9 @@
 
 # [[conversion]] to the use of the [[metric system]]; [[metrification]]
 
+====Synonyms====
+* [[metrification]] {{qualifier|US|Canada}}
+
 ====Related terms====
 * [[metricate]]
 
