--- a/en/s/sawm.746803.wikitext
+++ b/en/s/sawm.746803.wikitext
@@ -29,6 +29,7 @@ From {{etyl|ar|en}} {{term|صَوْم||tr=ṣawm|fasting; abstaining from food, 
 * Malay: {{t|ms|puasa}}
 * Persian: {{t+|fa|روزه|tr=roza}}
 * Polish: {{t|pl|saum|m}}
+* Portuguese: {{t|pt|sawm|f}}
 * Tatar: {{t+|tt|ураза|tr=uraza|sc=Cyrl}}
 * Turkish: {{t+|tr|oruç}}
 * Urdu: {{t|ur|روزہ|tr=roza|m}}
