--- a/en/m/multiplication.26254.wikitext
+++ b/en/m/multiplication.26254.wikitext
@@ -51,10 +51,11 @@ When applied to whole numbers, multiplication can be considered as repeated addi
 {{trans-top|calculation}}
 * Dutch: {{t+|nl|vermenigvuldiging|f}}
 * Esperanto: {{t|eo|multipliko}}
+* French: {{t+|fr|multiplication|f}}
 * Greek: {{t+|el|πολλαπλασιασμός|m|tr=pollaplasiasmós}}
 * Hungarian: {{t+|hu|szorzás}}
-* Malay: {{t|ms|pendaraban}}
 {{trans-mid}}
+* Malay: {{t|ms|pendaraban}}
 * Portuguese: {{t+|pt|multiplicação|f}}
 * Romanian: {{t+|ro|înmulțire|f}}, {{t|ro|multiplicare|f}}
 * Swedish: {{t+|sv|multiplikation|c}}
