t+sv:[[likväl]] t+sv:[[ändå]] t+sv:[[i alla fall]] t+sv:[[trots det]] ([[WT:EDIT|Assisted]]) <even so#24812374>

--- a/en/e/even so.742278.wikitext
+++ b/en/e/even so.742278.wikitext
@@ -16,6 +16,7 @@
 * Mandarin: {{t|cmn|即使这样|sc=Hani}}
 * Russian: {{t|ru|несмотря на это|tr=nesmotrjá na éto|sc=Cyrl}}
 * Spanish: {{t|es|aún así}}
+* Swedish: {{t+|sv|likväl}}, {{t+|sv|ändå}}, {{t+|sv|i alla fall}}, {{t|sv|trots det}}
 {{trans-bottom}}
 
 [[Category:English adverbs]]
