--- a/en/o/Olympus Mons.854983.wikitext
+++ b/en/o/Olympus Mons.854983.wikitext
@@ -5,7 +5,7 @@ Named in 1973 after the [[albedo feature]] {{term|Nix Olympica||Snows of Olympus
 
 {{wikipedia}}
 ===Proper noun===
-{{mul-proper noun|head=[[Olympus]] [[Mons]]}}
+{{en-proper noun|head=[[Olympus]] [[Mons]]}}
 
 # {{context|surface feature|lang=en}} An [[extinct]] [[volcano]] and [[prominent]] [[feature]] on the [[planet]] [[Mars]], notable as the highest [[mountain]] in the [[solar system]] (elevation: 27 [[kilometers]]).
 
