--- a/en/g/grognard.855664.wikitext
+++ b/en/g/grognard.855664.wikitext
@@ -1,7 +1,10 @@
 ==English==
 
 ===Etymology===
-From {{etyl|fr|en}} {{term|grognard||lang=fr|old soldier}}.
+From the {{etyl|fr|en}} {{term|grognard||lang=fr|old soldier}}.
+
+===Pronunciation===
+{{rfp|lang=en}}
 
 ===Noun===
 {{en-noun}}
@@ -10,12 +13,24 @@ From {{etyl|fr|en}} {{term|grognard||lang=fr|old soldier}}.
 # {{context|games|slang|lang=en}} Someone who [[enjoys]] playing older war-games or roleplaying games, or older versions of such games, when newer ones are available.
 #: ''James is such a ''grognard'', he only plays the original edition of Dungeons and Dragons.''
 
+====Translations====
+{{trans-top|old soldier}}
+{{trans-mid}}
+{{trans-bottom}}
+
+{{trans-top|''games, slang'': person who prefers to play older (versions of) war games or RPGs}}
+{{trans-mid}}
+{{trans-bottom}}
+
 ----
 
 ==French==
 
 ===Etymology===
 From {{term|grognard||grumbler|lang=fr}}, from {{term|grogner||snarl, grunt, growl, grumble|lang=fr}} + {{term|-ard|lang=fr}}
+
+===Pronunciation===
+{{rfp|lang=en}}
 
 ===Noun===
 {{fr-noun|m}}
