--- a/en/l/Las Vegas.741384.wikitext
+++ b/en/l/Las Vegas.741384.wikitext
@@ -41,6 +41,7 @@ From {{etyl|es|en}} {{term|las|lang=es}} {{term|vegas||the meadows|lang=es}}.
 * [[salvages#English|salvages]]
 
 [[Category:en:Cities]]
+[[Category:en:Nevada]]
 [[Category:en:New Mexico]]
 
 [[de:Las Vegas]]
