--- a/en/b/bend.6792.wikitext
+++ b/en/b/bend.6792.wikitext
@@ -90,7 +90,7 @@ From {{etyl|enm|en}} {{term|benden|lang=enm}}, from {{etyl|ang|en}} {{term|benda
 {{trans-mid}}
 * Kurdish:
 *: Sorani: {{t|ku|چه‌ماندن}}
-* Latin: {{t|la|flecto}}, {{t|la|sinuō}}
+* Latin: {{t|la|flecto}}, {{t|la|sinuō}}, {{t|la|curvo}}
 * Norwegian: {{t+|no|bøye}}
 * Polish: {{t+|pl|zgiąć}}
 * Portuguese: {{t+|pt|dobrar}}, {{t+|pt|curvar}}
