--- a/en/n/no kidding.742290.wikitext
+++ b/en/n/no kidding.742290.wikitext
@@ -14,7 +14,8 @@
 {{trans-top|(idiomatic) really? ; no kidding! ; Is that so?}}
 * Chinese:
 *: Cantonese: {{t|yue|講真|alt=講真？！|sc=Hant}}, {{t|yue|讲真|alt=讲真？！|tr=gong2 zan1?!|sc=Hant}}
-*: Mandarin: {{t+|cmn|當真|alt=當真？！|sc=Hani}}, {{t+|cmn|当真|tr=dàngzhēn?!|alt=当真？！|sc=Hani}}
+*: Mandarin: {{t+|cmn|當真|alt=當真？！|sc=Hani}}, {{t+|cmn|当真|tr=dàngzhēn?!|alt=当真？！|sc=Hani}}, {{t|cmn|[[不]][[會]][[吧]]？|sc=Hani}}, {{t|cmn|[[不]][[会]][[吧]]？|tr=bù huì ba?|sc=Hani}}
+* {{trreq|Finnish}}
 * French: {{t+|fr|sans blague}}
 {{trans-mid}}
 * German: {{qualifier|colloquial}} {{t|de|ohne Scheiß}}, {{t|de|im Ernst}}
