can be unc <pusillanimity#25098400>

--- a/en/p/pusillanimity.741240.wikitext
+++ b/en/p/pusillanimity.741240.wikitext
@@ -4,7 +4,7 @@
 From the ecclesiastical {{etyl|la|en}} ''[[pusillanimis]]'', from ''[[pusillus]]'' (puny) + ''[[animus]] (spirit) + ''[[-ous]]. A translation of the Greek {{term|ὀλιγόψυχος||faint-hearted|tr=oligopsykhos|lang=grc}}.
 
 ===Noun===
-{{en-noun|pusillanimities}}
+{{en-noun|~|pusillanimities}}
 
 # The quality or state of being [[pusillanimous]];  the [[vice]] of being [[timid]] and [[cowardly]], and thus not living up to one's full [[potential]]; [[pusillanimousness]].
 #* '''1685'''.  [[w:Miguel de Molinos|Dr. Michael de Molinos]]: ''The Spiritual Guide which Disentangles the Soul, and Brings it by the Inward Way To The Getting of Perfect Contemplation and the Rich Treasure of Internal Peace'', CHAP. XVIII: [http://www.ccel.org/ccel/molinos/guide.html].
