--- a/en/p/phylloxera.746072.wikitext
+++ b/en/p/phylloxera.746072.wikitext
@@ -2,7 +2,7 @@
 ==English==
 
 ===Etymology===
-Scientific Latin (as genus name), from {{term|phyllo-}} + {{etyl|grc|en}} {{term|ξηρός||tr=xeros|lang=grc|dry}}.
+From the original, superseded genus name {{term|Phylloxera|lang=mul}}, {{etyl|NL.}}, from {{etyl|grc}} {{term|||tr=phylla|lang=la|leaf}} + {{term|ξηρός||tr=xeros|lang=grc|dry}}.
 
 ===Pronunciation===
 *{{a|UK}} {{IPA|/fɪˈlɒksəɹə/}}
