--- a/en/p/phylloxera.746072.wikitext
+++ b/en/p/phylloxera.746072.wikitext
@@ -2,7 +2,7 @@
 ==English==
 
 ===Etymology===
-From the original, superseded genus name {{term|Phylloxera|lang=mul}}, {{etyl|NL.}}, from {{etyl|grc}} {{term|φύλλον||tr=phylla|lang=grc|leaf}} + {{term|ξηρός||tr=xeros|lang=grc|dry}}.
+From the original, superseded genus name {{term|Phylloxera|lang=mul}}, {{etyl|NL.}}, from {{etyl|grc}} {{term|φύλλον||tr=phyllon|lang=grc|leaf}} + {{term|ξηρός||tr=xeros|lang=grc|dry}}.
 
 ===Pronunciation===
 *{{a|UK}} {{IPA|/fɪˈlɒksəɹə/}}
