--- a/en/p/palinspastic.776587.wikitext
+++ b/en/p/palinspastic.776587.wikitext
@@ -2,11 +2,12 @@
 {{was wotd|2013|January|21}}
 
 ===Etymology===
-From {{etyl|grc|en}} {{term|sc=Grek|lang=el|πάλιν||again|tr=pálin}} + {{term|sc=Grek|lang=el|σπαστικός||drawing|tr=spastikós}}.
+From {{etyl|grc|en}} {{term|lang=grc|πάλιν||again}} + {{term|lang=grc|σπαστικός||drawing}}.
 
 ===Pronunciation===
 * {{IPA|/pælɪnˈspæstɪk/}}
 * {{rhymes|æstɪk}}
+* {{hyphenation|pal|in|spas|tic}}
 
 ===Adjective===
 {{en-adj|-}}
