--- a/en/p/photosite.741095.wikitext
+++ b/en/p/photosite.741095.wikitext
@@ -8,4 +8,4 @@ From [[photo]] + [[site]].
 {{en-noun}}
 {{wikipedia}}
 
-# Individual [[light]] sensitive element in a [[digital]] [[image]] [[sensor]].
+# Individual [[lyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyight]] sensitive element in a [[digital]] [[image]] [[sensor]].
