Reverted edits by [[Special:Contributions/66.222.147.113|66.222.147.113]]. If you think this rollback is in error, please leave a message on my talk page. <photosite#25173799>

--- a/en/p/photosite.741095.wikitext
+++ b/en/p/photosite.741095.wikitext
@@ -8,4 +8,4 @@ From [[photo]] + [[site]].
 {{en-noun}}
 {{wikipedia}}
 
-# Individual [[lyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyight]] sensitive element in a [[digital]] [[image]] [[sensor]].
+# Individual [[light]] sensitive element in a [[digital]] [[image]] [[sensor]].
