--- a/en/月/月.4427.wikitext
+++ b/en/月/月.4427.wikitext
@@ -128,17 +128,14 @@ As part of a compound, should not be confused with [[⺼]], form of {{term|肉||
 {{bottom}}
 
 ===Noun===
-{{ja-noun|k|hira=つき|rom=tsuki}}
+{{ja-noun|つき}}
 
 # the [[moon]]
-#: {{usex|日本では'''月'''にうさぎが住んでいるというお話があります。|tr=にほんでは'''つき'''にうさぎがすんでいるというおはなしがあります。<br/>''Nihon de wa '''tsuki''' ni usagi ga sunde iru toiu ohanashi ga arimasu.''|t=In Japan, there is a fairy-tale that rabbits live on the '''moon'''.|lang=ja}}
-#: {{usex|'''月'''は地球の唯一の衛星です。|tr='''つき'''はちきゅうのゆいいつのえいせいです。<br/>'''''Tsuki''' wa chikyū no yui'itsu no eisei desu.''|t='''Moon''' is the only one [[satellite]] of the [[Earth]].|lang=ja}}
+#: {{ja-usex|日本では'''月'''にうさぎが住んでいるというお話があります。|にほん で は '''つき''' に うさぎ が すんで いる と いう お-はなし が あります。|In Japan, there is a fairy-tale that rabbits live on the '''moon'''.}}
+#: {{ja-usex|'''月'''は地球の唯一の衛星です。|'''つき''' は ちきゅう の ゆい.いつ の えいせい です。|The '''moon''' is the only one [[satellite]] of the [[Earth]].}}
 # the [[lunar]] [[cycle]], a [[month]]
-#: {{usex|'''月'''に一度、旅行に出かけます。|tr='''つき'''にいちど、りょこうにでかけます。<br/>'''''Tsuki''' ni ichido, ryokō ni dekake masu.''|t=I go for a trip once a '''month'''.|lang=ja}}
+#: {{ja-usex|'''月'''に一度、旅行に出かけます。|'''つき''' に いち ど、 りょこう に でかけます。|I go for a trip once a '''month'''.|lang=ja}}
 # {{context|tarot|lang=ja}}: The [[moon|Moon]]; the eighteenth [[trump]] or [[major arcana]] [[card]] in most traditional Tarot decks.  
-
-====Coordinate terms====
-* [[タロット]] (''[[tarotto]]''):  The [[tarot]].  
 
 ====Synonyms====
 * {{sense|the moon}} {{l|ja|太陰}}, {{l|ja|ムーン}}
