--- a/en/b/bend.6792.wikitext
+++ b/en/b/bend.6792.wikitext
@@ -91,6 +91,7 @@ From {{etyl|enm|en}} {{term|benden|lang=enm}}, from {{etyl|ang|en}} {{term|benda
 * Kurdish:
 *: Sorani: {{t|ku|چه‌ماندن}}
 * Latin: {{t|la|flecto}}, {{t|la|sinuō}}, {{t|la|curvo}}
+* Maori: {{t|mi|ngawaki}} {{qualifier|refers to knees}}
 * Norwegian: {{t+|no|bøye}}
 * Polish: {{t+|pl|zgiąć}}
 * Portuguese: {{t+|pt|dobrar}}, {{t+|pt|curvar}}
