--- a/en/w/wassen.4471.wikitext
+++ b/en/w/wassen.4471.wikitext
@@ -74,7 +74,7 @@ From {{etyl|osx|nds}} {{term|wahsan|lang=osx}}, from {{etyl|gem-pro|nds}} {{term
 # to [[wax]], [[grow]]
 
 ====Conjugation====
-{{nds-conj-st|wass|wass|wuss|wuss|wuss}}
+{{nds-conj-st|class=7|wass|wass|wuss|wuss|wuss}}
 
 [[el:wassen]]
 [[eu:wassen]]
