--- a/en/m/maximum.34063.wikitext
+++ b/en/m/maximum.34063.wikitext
@@ -135,7 +135,7 @@ French from {{etyl|la|en}} ''[[#Latin|maximum]]''.
 * {{audio|Fr-maximum.ogg|Audio}}
 
 ===Noun===
-{{fr-noun|m|maxima|pl2=maximums}}
+{{fr-noun|m|maxima|maximums}}
 
 # {{l|en|maximum}}
 
