--- a/en/g/grognard.855664.wikitext
+++ b/en/g/grognard.855664.wikitext
@@ -4,7 +4,7 @@
 From the {{etyl|fr|en}} {{term|grognard||lang=fr|old soldier}}.
 
 ===Pronunciation===
-{{rfp|lang=en}}
+/ɡrɔnjar/
 
 ===Noun===
 {{en-noun}}
