--- a/en/i/indeterminable.742104.wikitext
+++ b/en/i/indeterminable.742104.wikitext
@@ -1,6 +1,9 @@
 {{also|indéterminable}}
 ==English==
 
+===Etymology===
+From {{etyl|frm|en}} {{term|indéterminable|lang=frm}}, from {{etyl|LL.|en}} {{term|indeterminabilis|lang=la}}
+
 ===Adjective===
 {{en-adj}}
 
