--- a/en/y/yeah.4305.wikitext
+++ b/en/y/yeah.4305.wikitext
@@ -28,7 +28,7 @@ Alternative etymology derives ''yeah'' from a drawling pronunciation of {{term|y
 * Arabic: {{t|ar|أيوة|tr='áywa}} {{qualifier|Eastern Arabic}}, {{t|ar|إية|tr='íyya}} {{qualifier|Western Arabic}}, {{t|ar|آ|tr='aa}} {{qualifier|Egyptian Arabic}}
 * Catalan: {{t+|ca|sí}}
 * Chinese:
-*: Mandarin: {{t+|cmn|是啊|tr=shì a|sc=Hani}}, {{t|cmn|對啊|sc=Hani}}, {{t|cmn|对啊|tr=duì a|sc=Hani}}, {{t+|cmn|啊|tr=à|sc=Hani}}, {{t+|cmn|嗯|tr=èn|sc=Hani}}
+*: Mandarin: {{t+|cmn|是啊|tr=shì a|sc=Hani}}, {{t|cmn|[[對]][[啊]]|sc=Hani}}, {{t|cmn|[[对]][[啊]]|tr=duì a|sc=Hani}}, {{t+|cmn|啊|tr=à|sc=Hani}}, {{t+|cmn|嗯|tr=ǹg|sc=Hani}}
 * Czech: {{t+|cs|jo}}, {{t+|cs|no}} <!-- Yes, this is in the right place, "no" means "yeah" or "yep" in Czech, Slovak, Polish -->
 * Dutch: {{t+|nl|ja}}, {{t+|nl|jawel}}
 * Finnish: {{t+|fi|joo}}, {{t+|fi|juu}}
@@ -40,14 +40,14 @@ Alternative etymology derives ''yeah'' from a drawling pronunciation of {{term|y
 * Interlingua: {{t|ia|si}}
 * Italian: {{t+|it|si}}, {{t+|it|già}}
 * Japanese: {{t|ja|うん|tr=un}}, {{t+|ja|そう|tr=sō}}, {{t+|ja|ええ|tr=ē}}, {{t+|ja|ああ|tr=ā}}
-* Korean: {{t+|ko|네|tr=ne|sc=Kore}}, {{t+|ko|예|tr=ye|sc=Kore}}, {{t+|ko|응|tr=eung|sc=Kore}}, {{t+|ko|응|tr=eo|sc=Kore}}
+* Korean: {{t+|ko|응|tr=eung|sc=Kore}}, {{t+|ko|네|tr=ne|sc=Kore}}, {{t+|ko|예|tr=ye|sc=Kore}}, {{t+|ko|응|tr=eung|sc=Kore}}, {{t+|ko|응|tr=eo|sc=Kore}}
 {{trans-mid}}
 * Navajo: {{t|nv|wehee}}
 * Norwegian: {{t+|no|ja}}, {{t|no|yeah}}
 * Persian: {{t+|fa|بله|tr=bale}}, {{t+|fa|آره|tr=âre|sc=fa-Arab}}
 * Polish: {{t+|pl|tak}}, {{t+|pl|no}}<!-- Yes, this is in the right place, "no" means "yeah" or "yep" in Czech, Slovak, Polish -->
 * Portuguese: {{t+|pt|sim}}
-* Russian: {{t+|ru|ага|tr=agá, ahá}}, {{t+|ru|угу|tr=ugú, uhú}}, {{t+|ru|так|tr=tak}}, {{t+|ru|ну|tr=nu}}
+* Russian: {{t+|ru|ага́|tr=agá, ahá}}, {{t+|ru|угу́|tr=ugú, uhú}}, {{t+|ru|так}}, {{t+|ru|ну|sc=Cyrl}}
 * Serbo-Croatian: {{t|sh|da}} {{t|sh|da}}
 *: Cyrillic: {{t|sh|ја|sc=Cyrl}}
 *: Roman: {{t+|sh|ja|sc=Latn}}
