--- a/en/b/bent.6793.wikitext
+++ b/en/b/bent.6793.wikitext
@@ -163,6 +163,7 @@ See also verb form {{term|bennen|lang=nl}}.
 
 ===Pronunciation===
 * {{IPA|/ˈbɛnt/|lang=hu}}
+* {{audio|Hu-bent.ogg|Audio}}
 * {{hyphenation|bent}}
 
 ===Adverb===
