/* References */templatize using [[Project:AWB|AWB]] <go by the board#25273856>

--- a/en/g/go by the board.746590.wikitext
+++ b/en/g/go by the board.746590.wikitext
@@ -7,8 +7,8 @@
 # {{context|idiomatic|lang=en}} To be [[superseded]], [[rejected]], or [[obliterated]]; to pass by with little consequence; to amount to [[nothing]].
 
 ===References===
-*"[http://dictionary.reference.com/search?r=2&q=go+by+the+board go by the board]" in the ''Dictionary.com Unabridged, v1.0.1'', Lexico Publishing Group, 2006.
-*"[http://www.m-w.com/cgi-bin/dictionary?book=Dictionary&va=go+by+the+board go by the board]" in ''Merriam-Webster's Online Dictionary'', © 2006-2007 Merriam-Webster, Incorporated.
-* ''Oxford English Dictionary'', 2nd ed., 1989. ''See'' "board, ''n.''."
+* {{R:Dictionary.com}}
+* {{R:Merriam Webster Online}}
+* ''Oxford English Dictionary'', second edition (1989) (''see'' "board, ''n.''")
 
 [[et:go by the board]]
