t+ast:[[texón]] t+ast:[[melandru]] t+ast:[[melón]] ([[WT:EDIT|Assisted]]) <badger#25284806>

--- a/en/b/badger.8231.wikitext
+++ b/en/b/badger.8231.wikitext
@@ -44,6 +44,7 @@ From {{etyl|enm|en}} {{term|bageard||marked by a badge|lang=enm}}, from {{term|b
 * Albanian: {{t+|sq|baldosë|f}}
 * Arabic: {{t|ar|غرير|m|tr=ġarīr|sc=Arab}}
 * Armenian: {{t|hy|գորշուկ|tr=goršuk}}, {{t|hy|փորսուղ|tr=p’orsuġ}}, {{t|hy|իշղար|tr=išġar}}
+* Asturian: {{t|ast|texón|m}}, {{t|ast|melandru|m}}, {{t|ast|melón|m}}
 * Azeri: {{t+|az|porsuq}}
 * Basque: {{t+|eu|azkonar}}
 * Belarusian: {{t|be|барсук|m|tr=barsúk|sc=Cyrl}}
