--- a/en/p/pig.8244.wikitext
+++ b/en/p/pig.8244.wikitext
@@ -253,7 +253,7 @@ British slang sense "police officer" from ''ante'' 1785.<ref>'''2003''', Victori
 * Uyghur: {{t|ug|چوشقا|sc=ug-Arab}}
 * Uzbek: {{t|uz|choʻchka}}
 * Veps: {{t|vep|siga}}
-* Vietnamese: {{t|vi|chi lợn}}, {{t|vi|con heo}}
+* Vietnamese: {{t|vi|chi lợn}}, {{t|vi|con heo}}, {{t+|vi|heo}}
 * Volapük: {{qualifier|♂♀}} {{t+|vo|svin}}, {{qualifier|♂}} {{t+|vo|hisvin}}, {{qualifier|♀}} {{t+|vo|jisvin}}, {{qualifier|obsolete, ♂}} {{t|vo|omsvin}}, {{t|vo|domasvin}} {{qualifier|domestic}}
 * Welsh: {{t+|cy|mochyn|m}}
 * West Frisian: {{t|fy|baarch|c}}
