/* Adjective */ eye dialect, nonstandard <narsty#25318991>

--- a/en/n/narsty.741126.wikitext
+++ b/en/n/narsty.741126.wikitext
@@ -3,4 +3,4 @@
 ===Adjective===
 {{head|en|adjective}}
 
-# {{alternative spelling of|nasty|lang=en}}
+# {{cx|nonstandard|lang=en}} {{eye dialect|nasty|lang=en}}
