--- a/en/i/island.4316.wikitext
+++ b/en/i/island.4316.wikitext
@@ -187,7 +187,9 @@ From earlier {{term|iland|lang=en}}, from {{etyl|enm|en}} {{term|iland|lang=enm}
 * Niuean: {{t|niu|motu}}
 * Norman: {{t|roa-nor|île}}
 * North Frisian: {{qualifier|Mooring}} {{t|frr|ailönj|n}}; {{qualifier|Föhr-Amrum}} {{t|frr|eilun|n}}
-* Norwegian: {{t+|no|øy|m|f}}
+* Norwegian: 
+*: Bokmål: {{t+|nb|øy|m|f}}
+*: Nynorsk: {{t|nn|øy|f}}
 * Nottoway-Meherrin: {{t|nwy|eohtessieh}}
 * {{trreq|nov}}
 * Occitan: {{t+|oc|illa|f}}
