--- a/en/m/mania.34111.wikitext
+++ b/en/m/mania.34111.wikitext
@@ -40,6 +40,7 @@ From {{etyl|la|en}} {{term|mania|lang=la}}, from {{etyl|grc|en}} {{term|μανί
 * Greek: {{t+|el|μανία|f|tr=manía|sc=Grek}}
 * Italian: {{t+|it|mania|f}}
 * Japanese: {{t|ja|躁病|tr=そうびょう, sōbyō|sc=Jpan}}
+* Portuguese: {{t|pt|insanidade|f}}
 * Romanian: {{t+|ro|mânie}}
 * Russian: {{t+|ru|мания|f|tr=mánija}}
 * Spanish: {{t+|es|manía|f}}
