t+grc:[[Ἰωνία]] t+peo:[[𐎹𐎢𐎴]] ([[WT:EDIT|Assisted]]) <Ionia#25395455>

--- a/en/i/Ionia.775850.wikitext
+++ b/en/i/Ionia.775850.wikitext
@@ -16,6 +16,9 @@ From {{etyl|grc|en}} '''[[Ἰωνία]]'''.
 {{trans-top|(historical) Ancient Greek settlement}}
 * French: {{t+|fr|Ionie|f}}
 {{trans-mid}}
+* Greek:
+*: Ancient: {{t|grc|Ἰωνία|f|sc=polytonic}}
+* Old Persian: {{t|peo|𐎹𐎢𐎴|tr=Yauna|sc=Xpeo}}
 {{trans-bottom}}
 
 [[Category:en:Cities]]
