--- a/en/i/Ionia.775850.wikitext
+++ b/en/i/Ionia.775850.wikitext
@@ -2,7 +2,7 @@
 {{wikipedia}}
 
 ===Etymology===
-From {{etyl|grc|en}} '''[[Ἰωνία]]'''.
+From {{etyl|grc|en}} {{term/t|grc|Ἰωνία}}.
 
 ===Proper noun===
 {{en-proper noun}}
