--- a/en/i/Ionia.775850.wikitext
+++ b/en/i/Ionia.775850.wikitext
@@ -8,9 +8,12 @@ From {{etyl|grc|en}} {{term/t|grc|Ἰωνία}}.
 {{en-proper noun}}
 
 # {{context|historical|lang=en}} An Ancient Greek settlement on the west coast of [[Asia Minor]] inhabited by the [[Ionian]]s, one of the four main [[Hellenic]] tribes.
-# A [[city]] in [[Iowa]].
+# A city in [[Iowa]].
 # A city in [[Michigan]].
 # A village in [[Missouri]].
+
+====Related terms====
+* [[Ion]]
 
 ====Translations====
 {{trans-top|(historical) Ancient Greek settlement}}
