/* Translations */ +gloss <oblanceolate#25461922>

--- a/en/o/oblanceolate.746762.wikitext
+++ b/en/o/oblanceolate.746762.wikitext
@@ -9,7 +9,7 @@
 # {{context|botany|of leaves|lang=en}} Of a reversed [[lanceolate]] shape: attached to the [[stem]] by the [[pointed]] end, with the other [[end]] rounded.
 
 ====Translations====
-{{trans-top}}
+{{trans-top|of a reversed lanceolate shape}}
 * Italian: {{t|it|oblanceolato}}
 {{trans-mid}}
 {{trans-bottom}}
