--- a/en/c/catch it.802385.wikitext
+++ b/en/c/catch it.802385.wikitext
@@ -3,6 +3,7 @@
 ===Verb===
 {{en-verb|head=[[catch]] [[it]]|catches it|catching it|caught it}}
 
+# {{&lit|catch|it|lang=en}}
 # {{context|idiomatic|lang=en}} be severely reprimanded, punished, or beaten
 #* '''1860''', George Eliot , ''The Mill on the Floss''
 #*: "You'll '''catch it''', you know," said Tom, nodding his head in an admonitory manner, and hesitating a little as he took the scissors.
