Fixing translation table to use {{t}} ([[User:Kephir/gadgets/xte|assisted]]) <weasel#25470358>

--- a/en/w/weasel.8232.wikitext
+++ b/en/w/weasel.8232.wikitext
@@ -107,35 +107,35 @@ The verb comes from the supposed cunningness of the weasel.
 {{trans-bottom}}
 
 {{checktrans-top}}
-* {{ttbc|sq}}: [[nuse e lalës]]
-* {{ttbc|eu}}: [[erbinude]]
-* {{ttbc|be}}: [[ласка]]
-* {{ttbc|bg}}: [[невестулка]] ([[nevestulka]])
-* {{ttbc|ca}}: [[mostela]] {{g|f}}
-* {{ttbc|fur}}: [[bilite]]
-* {{ttbc|gl}}: [[donicela]], [[denociña]]
-* {{ttbc|is}}: [[hreysiköttur]], [[vesla]]
-* {{ttbc|it}}: [[donnola]] {{g|f}}
-* {{ttbc|lld}}: [[belora]]
-* {{ttbc|la}}: [[mustela#Latin|mustela]]
-* {{ttbc|lt}}: [[žebenkštis]]
-* {{ttbc|mt}}: [[ballottra]]
-* {{ttbc|no}}: [[snømus]], [[vesel]]
-* {{ttbc|oc}}: [[mostèla]], [[polida]]
+* {{ttbc|sq}}: {{t|sq|nuse e lalës}}
+* {{ttbc|eu}}: {{t|eu|erbinude}}
+* {{ttbc|be}}: {{t|be|ласка|sc=Cyrl}}
+* {{ttbc|bg}}: {{t|bg|невестулка|tr=[[nevestulka]]|sc=Cyrl}}
+* {{ttbc|ca}}: {{t|ca|mostela|f}}
+* {{ttbc|fur}}: {{t|fur|bilite}}
+* {{ttbc|gl}}: {{t|gl|donicela}}, {{t|gl|denociña}}
+* {{ttbc|is}}: {{t|is|hreysiköttur}}, {{t|is|vesla}}
+* {{ttbc|it}}: {{t|it|donnola|f}}
+* {{ttbc|lld}}: {{t|lld|belora}}
+* {{ttbc|la}}: {{t|la|mustela}}
+* {{ttbc|lt}}: {{t|lt|žebenkštis}}
+* {{ttbc|mt}}: {{t|mt|ballottra}}
+* {{ttbc|no}}: {{t|no|snømus}}, {{t|no|vesel}}
+* {{ttbc|oc}}: {{t|oc|mostèla}}, {{t|oc|polida}}
 {{trans-mid}}
-* {{ttbc|pt}}: [[doninha]]
-* {{ttbc|ro}}: [[nevăstuică]] {{g|f}}
-* {{ttbc|rom}}: [[boriori]] {{g|f}}
-* {{ttbc|sc}}: [[bucca de mele]], [[bucchemeli]]
-* {{ttbc|sh}}: [[ласица]] ([[lasica]])
-* {{ttbc|sk}}: [[lasica]]
-* {{ttbc|sl}}: [[podlasica]] {{g|f}}
-* {{ttbc|es}}: [[comadreja]] {{g|f}}, [[mostela]] {{g|f}}
-* {{ttbc|sv}}: [[vessla]]
-* {{ttbc|tr}}: [[gelincik]]
-* {{ttbc|uk}}: [[ласиця]] ([[lasicja]])
-* {{ttbc|cy}}: [[bronwen]], [[gwenci]]
-* {{ttbc|wym}}: [[gyfaotela]]
+* {{ttbc|pt}}: {{t|pt|doninha}}
+* {{ttbc|ro}}: {{t|ro|nevăstuică|f}}
+* {{ttbc|rom}}: {{t|rom|boriori|f}}
+* {{ttbc|sc}}: {{t|sc|bucca de mele}}, {{t|sc|bucchemeli}}
+* {{ttbc|sh}}: {{t|sh|ласица}}, {{t|sh|lasica}}
+* {{ttbc|sk}}: {{t|sk|lasica}}
+* {{ttbc|sl}}: {{t|sl|podlasica|f}}
+* {{ttbc|es}}: {{t|es|comadreja|f}}, {{t|es|mostela|f}}
+* {{ttbc|sv}}: {{t|sv|vessla}}
+* {{ttbc|tr}}: {{t|tr|gelincik}}
+* {{ttbc|uk}}: {{t|uk|ласиця|tr=[[lasicja]]|sc=Cyrl}}
+* {{ttbc|cy}}: {{t|cy|bronwen}}, {{t|cy|gwenci}}
+* {{ttbc|wym}}: {{t|wym|gyfaotela}}
 {{trans-bottom}}
 
 ===Verb===
