--- a/en/b/better late than never.746527.wikitext
+++ b/en/b/better late than never.746527.wikitext
@@ -47,7 +47,7 @@ Perhaps a calque of the Latin phrase [[potiusque sero quam nunquam]] from the 4t
 * Welsh: {{t|cy|gwell hwyr na hwyrach|alt=gwell rhywbryd na byth}}
 {{trans-bottom}}
 
-===See also==
+===See also===
 *[[better safe than sorry]]
 
 ===References===
