--- a/en/p/phylloxera.746072.wikitext
+++ b/en/p/phylloxera.746072.wikitext
@@ -10,12 +10,12 @@ From the original, superseded genus name {{term|Phylloxera|lang=mul}}, {{etyl|NL
 ===Noun===
 {{en-noun|phylloxerae}}
 
-# An [[aphid]], {{taxlink|Daktulosphaira vitifoliae|species}} of the family [[Phylloxeridae]] (not the genus ''[[Phylloxera]]''), that is very destructive to [[grape]] [[vine]]s; also, the diseased condition of a vine caused by this aphid. {{defdate|from 19th c.}}
+# An [[aphid]], {{taxlink|Daktulosphaira vitifoliae|species|noshow=1}} of the family [[Phylloxeridae]] (not the genus ''[[Phylloxera]]''), that is very destructive to [[grape]] [[vine]]s; also, the diseased condition of a vine caused by this aphid. {{defdate|from 19th c.}}
 #*'''1977''', {{w|Alistair Horne}}, ''A Savage War of Peace'', New York Review Books 2006, p. 32:
 #*:thirty-five years later the coming of '''phylloxera''' to France launched the Algerian wine industry, and by the mid-twentieth century it had grown to be one of the Mediterranean's biggest producers.
 
 ====Synonyms====
-* {{sense|''Daktulosphaira vitifoliae''}} {{taxlink|Phylloxera vastatrix|species}} (invalid)
+* {{sense|''Daktulosphaira vitifoliae''}} {{taxlink|Phylloxera vastatrix|species|noshow=1}} (invalid)
 
 ====Translations====
 {{trans-top|aphid}}
