--- a/en/o/otter.8227.wikitext
+++ b/en/o/otter.8227.wikitext
@@ -127,7 +127,7 @@ From {{etyl|ang|en}} {{term|oter|lang=ang}}, from {{etyl|gem-pro|en}} {{term/t|g
 {{trans-bottom}}
 
 ===Etymology 2===
-Corruption. {{etystub|lang=en|corruption of what?}}
+{{etystub|lang=en|corruption of what?}}
 
 ====Noun====
 {{en-noun|-}}
