--- a/en/l/leather.4309.wikitext
+++ b/en/l/leather.4309.wikitext
@@ -5,6 +5,7 @@
 From {{etyl|enm|en}} {{term|lether|lang=enm}}, from {{etyl|ang|en}} {{term|leþer||leather|lang=ang}}, from {{etyl|gem-pro|en}} {{term/t|gem-pro|*leþrą||leather}}, from {{etyl|ine-pro|en}} {{term/t|ine-pro|*letrom||leather}}. Cognate with West Frisian {{term|leare||leather|lang=fy}}, {{etyl|nl|-}} {{term|leder|lang=nl}}, {{term|leer||leather|lang=nl}}, {{etyl|de|-}} {{term|Leder||leather|lang=de}}, Swedish {{term|läder||leather|lang=sv}}, {{etyl|is|-}} {{term|leður||leather|lang=is}}. The Celtic forms ({{etyl|cy|-}} {{term|lledr|lang=cy}}, {{etyl|ga|-}} {{term|lethar|lang=ga}}) ultimately derive from the Germanic.
 
 ===Pronunciation===
+* {{a|UK}} {{IPA|/ˈleðə/}}
 * {{a|US}} {{IPA|/ˈlɛðɚ/}}
 * {{audio|en-us-leather.ogg|Audio (US)}}
 * {{rhymes|ɛðə(r)}}
