changed wikimarkup list style <ratting#25546319>

--- a/en/r/ratting.742038.wikitext
+++ b/en/r/ratting.742038.wikitext
@@ -3,10 +3,10 @@
 ===Verb===
 {{head|en}}
 
-# {{present participle of|rat}}
+# {{present participle of|rat}} 
 #: ''Don't go '''ratting''' to the police about what happened.''
-'''RATting'''
-* [//en.wikipedia.org/wiki/Remote_Access_Trojan Remote Access Trojan]'ing - gaining Access to another computer, Remotely, via a Trojan 'virus' application or  malicious code snippet that can even be embedded in an image's bits. See article at [//en.wikipedia.org/wiki/Microsoft_TechNet Microsoft TechNet]: [http://technet.microsoft.com/en-us/library/dd632947.aspx "Danger: Remote Access Trojans"]
+
+#<li value="2"> '''RATting''' [//en.wikipedia.org/wiki/Remote_Access_Trojan Remote Access Trojan]'ing - gaining Access to another computer, Remotely, via a Trojan 'virus' application or  malicious code snippet that can even be embedded in an image's bits. See article at [//en.wikipedia.org/wiki/Microsoft_TechNet Microsoft TechNet]: [http://technet.microsoft.com/en-us/library/dd632947.aspx "Danger: Remote Access Trojans"]
 
 ===Noun===
 {{en-noun|-}}
