/* Derived terms */ fixed link to existing entry [[blow someone out of the water]] <blow#25550012>

--- a/en/b/blow.6803.wikitext
+++ b/en/b/blow.6803.wikitext
@@ -115,9 +115,9 @@ From {{etyl|enm|en}} {{term|blowen|lang=enm}}, from {{etyl|ang|en}} {{term/t|ang
 * [[blow out]]
 * [[blowout]]
 * [[blow over]]
+* [[blow someone out of the water]]
 * [[blow someone's brains out]]
 * [[blow someone's mind]]
-* [[blow someone's out of the water]]
 * [[blow someone's socks off]]
 * [[blow the whistle]]
 * [[blow up]]
