--- a/en/p/pig.8244.wikitext
+++ b/en/p/pig.8244.wikitext
@@ -48,6 +48,8 @@ British slang sense "police officer" from ''ante'' 1785.<ref>'''2003''', Victori
 # {{context|engineering|lang=en}} A device for cleaning or inspecting the inside of an oil or gas [[pipeline]], or for separating different substances within the pipeline. Named for the pig-like squealing noise made by their progress.
 #: ''Unfortunately, the '''pig''' sent to clear the obstruction got lodged in a tight bend, adding to the problem.''
 # {{context|pejorative|lang=en}} a person who is obese to the extent of resembling a pig (the animal)
+# (Military slang, US) a slang term for the M60 general purpose machine gun due to it's bulk size, weight, and eternal works in the South Vietnam environment.
+#: ''Unfortunately, the M60 is about twenty-four pounds and is very unbalanced. You try carrying the '''pig''' around the jungle see how you feel with it.''
 
 =====Synonyms=====
 {{checksense}}
