/* Translations */ +gloss <pusillanimity#25556982>

--- a/en/p/pusillanimity.741240.wikitext
+++ b/en/p/pusillanimity.741240.wikitext
@@ -21,7 +21,7 @@ From the ecclesiastical {{etyl|la|en}} ''[[pusillanimis]]'', from ''[[pusillus]]
 * [[faint-heartedness]]
 
 ====Translations====
-{{trans-top}}
+{{trans-top|being timid and cowardly}}
 * Italian: {{t|it|pusillanimità|f}}, {{t+|it|viltà|f}}
 * Spanish: {{t|es|pusilanimidad|f}}
 {{trans-mid}}
