/* Anagrams */ <sabre-toothed tiger#25563443>

--- a/en/s/sabre-toothed tiger.801837.wikitext
+++ b/en/s/sabre-toothed tiger.801837.wikitext
@@ -37,8 +37,7 @@
 * [[saber-toothed tiger#English|saber-toothed tiger]]
 
 [[Category:British English forms]]
-[[Category:en:Cats]]
-[[Category:en:Mammals]]
+[[Category:en:Felids]]
 
 [[et:sabre-toothed tiger]]
 [[ta:sabre-toothed tiger]]
