--- a/en/a/at.3964.wikitext
+++ b/en/a/at.3964.wikitext
@@ -47,6 +47,11 @@ From {{etyl|enm|en}} {{term|at|lang=enm}}, from {{etyl|ang|en}} {{term|æt||at, 
 #: ''She is [[at sixes and sevens|'''at''' sixes and sevens]] with him.''
 #: ''They are [[at loggerheads|'''at''' loggerheads]] over how best to tackle the fiscal cliff.''
 #: ''The city was [[at the mercy of|'''at''' the mercy of]] the occupying forces.''
+# {{context|Ireland}} (stressed pronunciation) bothering, irritating, causing discomfort to
+#*'''1995''' Keith Wood, quoted in David Hughes, "[http://www.independent.co.uk/sport/rugby-union-wood-oddson-to-take-one-against-the-head-1568622.html Wood odds-on to take one against the head]", in ''The Independent'' (London) 18 January 1995:
+#*:I think `Jesus, my back is '''at''' me'. Then I get the ball. Off you go for 10 yards and you don't feel a thing. Then you stop and think: `Jesus, it's '''at''' me again'[.]
+#*'''2014''' Marian Keyes "[http://www.mariankeyes.com/newsletter/January2014-2?forumboardid=26&forumtopicid=26 Antarctic Diary - Part 2]" personal website (January 2014):
+#*:He seems to be saying. “Ah, go on, you’re making the other lads feel bad.” But the 4th fella says, “No. Don’t be '''‘at’''' me. I’m just not in the form right now, I’ll stay where I am, thanks.” 
 
 ====Usage notes====
 * ''He threw the ball to me'' &mdash; (so I could catch it).
