/* See also */ <Judeophobia#25633833>

--- a/en/j/Judeophobia.774568.wikitext
+++ b/en/j/Judeophobia.774568.wikitext
@@ -13,7 +13,7 @@
 # An [[irrational]] [[fear]] or [[hatred]] of [[Jew]]s.
 
 ====See also====
-* [[antisemitism]]
+* [[anti-Semitism]]
 
 [[Category:en:Forms of discrimination]]
 [[Category:en:Phobias]]
