--- a/en/b/bind.6798.wikitext
+++ b/en/b/bind.6798.wikitext
@@ -81,6 +81,7 @@ From {{etyl|enm|en}} {{term|binden|lang=enm}}, from {{etyl|ang|en}} {{term|binda
 * Esperanto: {{t+|eo|ligi}}
 * Finnish: {{t+|fi|sitoa}}, {{t+|fi|yhdistää}}
 * French: {{t+|fr|lier}}
+* Friulian: {{t|fur|leâ}}
 * German: {{t+|de|verbinden}}, {{t|de|konnektieren}}
 * Hungarian: {{t+|hu|összeköt}}
 * Ido: {{t|io|bindar}}
@@ -92,7 +93,7 @@ From {{etyl|enm|en}} {{term|binden|lang=enm}}, from {{etyl|ang|en}} {{term|binda
 * Norwegian: {{t+|no|binde}}
 * Old Church Slavonic: {{t|cu|вѧсти|tr=vęsti|sc=Cyrs}}
 * Portuguese: {{t+|pt|conectar}}, {{t+|pt|juntar}}, {{t+|pt|copular}}, {{t+|pt|ligar}}
-* Romanian: {{t|ro|cuplare}}, {{t|ro|conectare}}, {{t|ro|legare}}
+* Romanian: {{t|ro|cupla}}, {{t|ro|conecta}}, {{t|ro|lega}}
 * Russian: {{t+|ru|вязать|impf|tr=vjazátʹ}}, {{t+|ru|связывать|impf|tr=svjázyvatʹ}}, {{t+|ru|связать|pf|tr=svjazátʹ}}
 * Scottish Gaelic: {{t|gd|cuibhrich}}, {{t|gd|naisg}}, {{qualifier|sheaves}} {{t|gd|sguab}}
 * Spanish: [[atar]] (tie), [[empastar]] (books)
