+phonology sense <bleed#25681539>

--- a/en/b/bleed.6801.wikitext
+++ b/en/b/bleed.6801.wikitext
@@ -29,6 +29,8 @@ From {{etyl|ang|en}} {{term/t|ang|blēdan}}, from {{etyl|gem-pro|en}} {{term/t|g
 # To issue forth, or drop, like blood from an incision.
 #* Alexander Pope
 #*: For me the balm shall '''bleed'''.
+# {{context|phonology|transitive|of a phonological rule|lang=en}} To destroy the environment where another phonological rule would have applied.
+#: ''Labialization '''bleeds''' palatalization.''
 
 ====Derived terms====
 * [[bleed dry]]
