--- a/en/m/muskrat.8239.wikitext
+++ b/en/m/muskrat.8239.wikitext
@@ -88,6 +88,7 @@ Perhaps so called for its [[musky]] [[odour]] and because it resembles a [[rat]]
 * Spanish: {{t|es|rata almizclera}}
 * Swedish: {{t+|sv|bisam|c}}
 * Telugu: {{t+|te|కంపెలుక|tr=kampeluka|sc=Telu}}
+* Tlingit: {{t|tli|tsín}}
 * Turkish: {{t|tr|misk sıçanı}}
 * Udmurt: {{t|udm|вукомак|tr=vukomak}}
 * Ukrainian: {{t|uk|ондатра|f|tr=ondatra}}
