--- a/en/l/lunger.774569.wikitext
+++ b/en/l/lunger.774569.wikitext
@@ -32,5 +32,21 @@
 * {{R:Dictionary.com}}
 * ''Oxford English Dictionary'', 2nd ed., 1989.
 
+----
+==Norwegian Bokmål==
+
+===Noun===
+{{head|nb|noun form|g=m|g2=f}}
+
+# {{inflection of|lunge||indefinite|p|lang=nb}}
+
+----
+==Norwegian Nynorsk==
+
+===Noun===
+{{head|nn|noun form|g=f}}
+
+# {{inflection of|lunge||indefinite|p|lang=nn}}
+
 [[et:lunger]]
 [[vi:lunger]]
