Reverted edits by [[Special:Contributions/95.178.193.111|95.178.193.111]]. If you think this rollback is in error, please leave a message on my talk page. <island#25747035>

--- a/en/i/island.4316.wikitext
+++ b/en/i/island.4316.wikitext
@@ -5,7 +5,7 @@
 [[Image:Island_near_Fiji.jpg|thumb|right|An island.]]
 
 ===Alternative forms===
-* {{l|en|iland}} 
+* {{l|en|iland}} {{qualifier|dialectal}}
 * {{l|en|ylond}}, {{l|en|ylelond}} {{qualifier|obsolete}}
 
 ===Etymology===
