--- a/en/i/island.4316.wikitext
+++ b/en/i/island.4316.wikitext
@@ -26,8 +26,8 @@ From earlier {{term|iland|lang=en}}, from {{etyl|enm|en}} {{term|iland|lang=enm}
 #: ''an '''island''' of colour on a butterfly's wing''
 #* '''1939''', Deseret News, October 27 1939, ''Roosevelt Reaffirms American Neutrality''
 #*: King Leopold, speaking in fluent English during his six minute broadcast, said Belgium stood side by side with Holland "an '''Island''' of peace in the interests of all"
-# A [[superstructure]] on an aircraft carrier's [[deck]]
-# {{context|UK|lang=en}} A [[traffic island]].
+# A [[superstructure]] on an [[aircraft carrier]]'s [[deck]].
+# {{context|chiefly|UK|lang=en}} A [[traffic island]].
 #: ''the '''island''' in the middle of a roundabout''
 
 ====Synonyms====
