--- a/en/w/whistle.7360.wikitext
+++ b/en/w/whistle.7360.wikitext
@@ -5,7 +5,8 @@
 {{etyl|enm|en}} {{term|whistlen|lang=enm}}; {{etyl|ang|en}} {{term|hwistlan|lang=ang}}, from {{etyl|gem-pro|en}} {{term/t|gem-pro|*hwistlōną}}
 
 ===Pronunciation===
-* {{a|UK}} {{IPA|/wɪsl̩/}}
+* {{a|UK}} {{IPA|/wɪsl̩/}}, {{IPA|/ʍɪsl̩/}}
+* {{a|US}} {{IPA|/wɪsl̩/}}, {{IPA|/ʍɪsl̩/}}
 * {{rhymes|ɪsəl}}
 * {{audio|en-us-whistle.ogg|Audio (US)}}
 
