/* Proper noun */ ancient language <Ligurian#25758667>

--- a/en/l/Ligurian.741748.wikitext
+++ b/en/l/Ligurian.741748.wikitext
@@ -42,9 +42,10 @@
 {{en-proper noun}}
 
 # The Gallo-Italic language of this region.
+# An ancient Proto-Indo-European language spoken by the {{l/en|Ligures}}.
 
 ====Translations====
-{{trans-top|language}}
+{{trans-top|Gallo-Italic language}}
 * Catalan: {{t|ca|lígur|m}}
 * French: {{t+|fr|ligurien|m}}
 * Galician: {{t|gl|lígur|m}}
