--- a/en/m/marten.8230.wikitext
+++ b/en/m/marten.8230.wikitext
@@ -61,7 +61,7 @@
 * Hungarian: {{t+|hu|nyuszt}}, {{t+|hu|nyest}}
 * Icelandic: {{t+|is|mörður}}
 * Irish: {{t+|ga|cat crainn}}
-* Italian: {{t+|it|martora|f}}, {{t+|it|martora|f}}
+* Italian: {{t+|it|martora|f}}
 * Japanese: {{t+|ja|テン|tr=ten|sc=Jpan}}
 * Jèrriais: {{t|roa-jer|martre|f}}
 * Korean: {{t+|ko|담비|tr=dam bi|sc=Kore}}
