/* Noun */ #* Drayton  #*: '''Cop''' they used to call / The tops of many hills. <cop#25768762>

--- a/en/c/cop.26062.wikitext
+++ b/en/c/cop.26062.wikitext
@@ -93,6 +93,8 @@ Short for {{term|copper||police officer}}, itself from {{term|cop||one who cops}
 
 # {{context|crafts|lang=en}} The ball of [[thread]] wound on to the spindle in a spinning machine.
 # {{context|obsolete|lang=en}} The [[top]], [[summit]], especially of a hill.
+#* Drayton
+#*: '''Cop''' they used to call / The tops of many hills.
 # {{context|obsolete|lang=en}} The [[head]].
 # A [[tube]] or [[quill]] upon which [[silk]] is wound.
 # {{context|architecture|military|lang=en}} A [[merlon]].
