t+fr:[[Office américain des brevets et marques]] t-balance ([[WT:EDIT|Assisted]]) <PTO#25770316>

--- a/en/p/PTO.26209.wikitext
+++ b/en/p/PTO.26209.wikitext
@@ -14,8 +14,9 @@
 
 ====Translations====
 {{trans-top|United States Patent and Trademark Office}}
-* German: {{t+|de|Patentamt|n}} der Vereinigten Staaten von America.
+* French: {{t|fr|Office américain des brevets et marques|m}}
 {{trans-mid}}
+* German: {{t+|de|Patentamt|n}} der Vereinigten Staaten von America.
 {{trans-bottom}}
 
 {{trans-top|Please turn over}}
