edit section 2.1 ([[WT:EDIT|Assisted]]) <Balkans#25789391>

--- a/en/b/Balkans.741828.wikitext
+++ b/en/b/Balkans.741828.wikitext
@@ -73,7 +73,7 @@ Used with the definite article {{term|the}}.
 
 ===Pronunciation===
 * {{IPA|/ˈbalkaːns/|lang=de}}
-* {{hyphenation|Bal|kans}}
+* {{hyphenation|Bal|kans|lang=de}}
 
 ===Proper noun===
 {{head|de|proper noun form}}
