--- a/en/a/advertisement.4312.wikitext
+++ b/en/a/advertisement.4312.wikitext
@@ -112,6 +112,7 @@ From {{etyl|frm|en}} {{term|advertissement||statement calling attention|lang=frm
 {{trans-top|public notice}}
 * Bulgarian: {{t+|bg|обявление}}, {{t+|bg|обява}}
 * Finnish: {{t+|fi|ilmoitus}}
+* French: {{t+|fr|avis|m}}, {{t+|fr|annonce|f}}
 * German: {{t+|de|Anzeige|f}}, {{t+|de|Bekanntmachung|f}}
 * Greek: {{t+|el|διαφήμιση|f|tr=diafimisi}}, {{t+|el|αγγελία|f|tr=agelía}}
 * Kurdish:
