t+ru:[[ураза]] t+ru:[[саум]] t+cmn:[[齋戒]] t+cmn:[[斋戒]] t+ml:[[വ്രതം]] t+si:[[සව්ම්]] t-balance t+az:[[oruc]] ([[WT:EDIT|Assisted]]) <sawm#25810310>

--- a/en/s/sawm.746803.wikitext
+++ b/en/s/sawm.746803.wikitext
@@ -16,6 +16,9 @@ From {{etyl|ar|en}} {{term|صَوْم||tr=ṣawm|fasting; abstaining from food, 
 ====Translations====
 {{trans-top|fasting, abstention}}
 * Arabic: {{t|ar|صوم|tr=ʂawm|m}}, {{t|ar|صيام|tr=ʂiyām|sc=Arab}}
+* Azeri: {{t+|az|oruc}}
+* Chinese:
+*: Mandarin: {{t+|cmn|齋戒|sc=Hani}}, {{t+|cmn|斋戒|tr=zhāijiè|sc=Hani}}
 * Dhivehi: {{t|dv|ރޯދަ}}
 * Finnish: {{t|fi|saum}}
 * French: {{t|fr|saoum|m}}
@@ -27,9 +30,12 @@ From {{etyl|ar|en}} {{term|صَوْم||tr=ṣawm|fasting; abstaining from food, 
 *: Sorani: {{t|ckb|ڕۆژوو|tr=rojû|sc=ku-Arab}}
 {{trans-mid}}
 * Malay: {{t|ms|puasa}}
+* Malayalam: {{t+|ml|വ്രതം|sc=Mlym}}
 * Persian: {{t+|fa|روزه|tr=roza}}
 * Polish: {{t|pl|saum|m}}
 * Portuguese: {{t|pt|sawm|f}}
+* Russian: {{t+|ru|ураза́|f|sc=Cyrl}}, {{t|ru|са́ум|m|sc=Cyrl}}
+* Sinhalese: {{t|si|සව්ම්|sc=Sinh}}
 * Spanish: {{t|es|sawm|m}}
 * Tatar: {{t+|tt|ураза|tr=uraza|sc=Cyrl}}
 * Turkish: {{t+|tr|oruç}}
