--- a/en/s/sawm.746803.wikitext
+++ b/en/s/sawm.746803.wikitext
@@ -15,7 +15,7 @@ From {{etyl|ar|en}} {{term|صَوْم||tr=ṣawm|fasting; abstaining from food, 
 
 ====Translations====
 {{trans-top|fasting, abstention}}
-* Arabic: {{t|ar|صوم|tr=ʂawm|m}}, {{t|ar|صيام|tr=ʂiyām|sc=Arab}}
+* Arabic: {{t|ar|صوم|tr=ṣawm|m}}, {{t|ar|صيام|m|tr=ṣiyām|sc=Arab}}
 * Azeri: {{t+|az|oruc}}
 * Chinese:
 *: Mandarin: {{t+|cmn|齋戒|sc=Hani}}, {{t+|cmn|斋戒|tr=zhāijiè|sc=Hani}}
