t+ru:[[пост]] t-balance ([[WT:EDIT|Assisted]]) <sawm#25810332>

--- a/en/s/sawm.746803.wikitext
+++ b/en/s/sawm.746803.wikitext
@@ -27,15 +27,15 @@ From {{etyl|ar|en}} {{term|صَوْم||tr=ṣawm|fasting; abstaining from food, 
 * Japanese: {{t|ja|サウム|tr=saumu|sc=Jpan}}
 * Kazakh: {{t|kk|ораза|tr=oraza|sc=Cyrl}}
 * Korean: {{t|ko|사움|tr=saum}}
-{{trans-mid}}
 * Kurdish: {{t+|ku|rojî}}
 *: Sorani: {{t|ckb|ڕۆژوو|tr=rojû|sc=ku-Arab}}
+{{trans-mid}}
 * Malay: {{t|ms|puasa}}
 * Malayalam: {{t+|ml|വ്രതം|sc=Mlym}}
 * Persian: {{t+|fa|روزه|tr=roza}}
 * Polish: {{t|pl|saum|m}}
 * Portuguese: {{t|pt|sawm|f}}
-* Russian: {{t+|ru|ураза́|f|sc=Cyrl}}, {{t|ru|са́ум|m|sc=Cyrl}}
+* Russian: {{t+|ru|ураза́|f|sc=Cyrl}}, {{t|ru|са́ум|m|sc=Cyrl}}, {{t+|ru|пост|m|sc=Cyrl}}
 * Sinhalese: {{t|si|සව්ම්|sc=Sinh}}
 * Spanish: {{t|es|sawm|m}}
 * Tatar: {{t+|tt|ураза|tr=uraza|sc=Cyrl}}
