t+cmn:[[禁食]] ([[WT:EDIT|Assisted]]) <sawm#25810348>

--- a/en/s/sawm.746803.wikitext
+++ b/en/s/sawm.746803.wikitext
@@ -19,7 +19,7 @@ From {{etyl|ar|en}} {{term|صَوْم||tr=ṣawm|fasting; abstaining from food, 
 * Azeri: {{t+|az|oruc}}
 * Bengali: {{t|bn|রোজা|tr=roja|sc=Beng}}
 * Chinese:
-*: Mandarin: {{t+|cmn|齋戒|sc=Hani}}, {{t+|cmn|斋戒|tr=zhāijiè|sc=Hani}}
+*: Mandarin: {{t+|cmn|齋戒|sc=Hani}}, {{t+|cmn|斋戒|tr=zhāijiè|sc=Hani}}, {{t+|cmn|禁食|tr=jìnshí|sc=Hani}}
 * Dhivehi: {{t|dv|ރޯދަ}}
 * Finnish: {{t|fi|saum}}
 * French: {{t|fr|saoum|m}}
