--- a/en/r/rot.26064.wikitext
+++ b/en/r/rot.26064.wikitext
@@ -146,6 +146,25 @@ From {{etyl|la|fr}} {{term|ructus|lang=la}}.
 
 ----
 
+==Friulian==
+
+===Etymology===
+From {{etyl|la|fur}} {{term/t|la|ruptus}}.
+
+===Adjective===
+{{head|fur|adjective}} (''feminine'' '''[[rote]]''')
+
+# [[broken]]
+
+====Related terms====
+* {{l|fur|rompi}}
+* {{l|fur|roture}}
+
+====Derived terms====
+* {{l|fur|rote}}
+
+----
+
 ==German==
 
 ===Alternative forms===
