--- a/en/a/AK.741222.wikitext
+++ b/en/a/AK.741222.wikitext
@@ -7,6 +7,9 @@
 
 # {{context|US|lang=en}} [[Alaska]], a state of the [[United States of America]].
 
+====Holonyms====
+* [[Western Hemisphere]], [[New World]], [[North America]], [[Usonia]], [[Usania]]
+
 ===Noun===
 {{en-noun}}
 
