--- a/en/o/otter.8227.wikitext
+++ b/en/o/otter.8227.wikitext
@@ -166,6 +166,7 @@ From {{etyl|dum|nl}} {{term|otter|lang=dum}}, from {{etyl|odt|nl}} {{term|ottar|
 [[eu:otter]]
 [[fr:otter]]
 [[fy:otter]]
+[[ga:otter]]
 [[ko:otter]]
 [[io:otter]]
 [[it:otter]]
