t+it:[[ventata]] ([[WT:EDIT|Assisted]]) <blow#25832626>

--- a/en/b/blow.6803.wikitext
+++ b/en/b/blow.6803.wikitext
@@ -398,6 +398,7 @@ From {{etyl|enm|en}} {{term|blowen|lang=enm}}, from {{etyl|ang|en}} {{term/t|ang
 {{trans-top|strong wind}}
 * Finnish: {{t|fi|puhuri}}, [[kova]] [[tuuli]]
 * German: {{t+|de|Böe|f}}
+* Italian: {{t|it|ventata|f}}
 * Macedonian: {{t|mk|виор|m|tr=víor}}
 {{trans-mid}}
 * Portuguese: {{t+|pt|ventania|f}}
