t+fur:[[siôr]] ([[WT:EDIT|Assisted]]) <sir#25833313>

--- a/en/s/sir.26262.wikitext
+++ b/en/s/sir.26262.wikitext
@@ -63,6 +63,7 @@ From {{etyl|enm|en}} {{term|sir|lang=enm}}, from {{etyl|fro|en}} {{term|sire||ma
 * Czech: {{t+|cs|pan|m}}, {{t+|cs|pán|m}}
 * Dutch: {{t+|nl|meneer|m}}, {{t+|nl|mijnheer|m}}
 * French: {{t+|fr|monsieur|m}}
+* Friulian: {{t|fur|siôr|m}}
 * German: {{t+|de|Herr|m}}, [[mein Herr]] {{g|m}} {{gloss|my lord}}
 * Greek: {{t+|el|κύριος|m}}, [[κύριε]] {{g|m}} ([[vocative case]])
 * Hebrew: {{t|he|אדוני|tr=adoní|sc=Hebr}}
