--- a/en/s/sir.26262.wikitext
+++ b/en/s/sir.26262.wikitext
@@ -70,6 +70,7 @@ From {{etyl|enm|en}} {{term|sir|lang=enm}}, from {{etyl|fro|en}} {{term|sire||ma
 * Hindi: {{t|hi|श्रीमान|m|tr=śrīmān}}, {{t|hi|श्री|tr=śrī|sc=Deva}}, {{t|hi|सर|m|tr=sar|sc=Deva}}, {{t|hi|साहिब|m|tr=sāhib|sc=Deva}}, {{t|hi|महोदय|m|tr=mahōday|sc=Deva}}
 {{trans-mid}}
 * Hungarian: {{t+|hu|uram}}
+* Italian: {{t+|it|signore|m}}
 * Japanese: {{t|ja|だんな|tr=danna}}, {{t|ja|サー|tr=sā}} {{qualifier|in translations from English}}
 * Korean: {{t+|ko|선생님|tr=seonsaengnim|sc=Hang}}, {{t+|ko|씨|tr=-ssi|alt=-씨|sc=Kore}}
 * Kurdish:
