--- a/en/s/sir.26262.wikitext
+++ b/en/s/sir.26262.wikitext
@@ -80,7 +80,7 @@ From {{etyl|enm|en}} {{term|sir|lang=enm}}, from {{etyl|fro|en}} {{term|sire||ma
 * Persian: {{t+|fa|آقا|tr=âqâ|sc=fa-Arab}}
 * Polish: {{t+|pl|pan|m}}, [[panie]] {{g|m}} ([[vocative case]])
 * Portuguese: {{t+|pt|senhor|m}}
-* Romanian: {{t|ro|domn|domn(ule)}}
+* Romanian: {{t|ro|domn|m}}, ({{t|ro|domnule}}) (''vocative'')
 * Russian: {{qualifier|obsolete}} {{t+|ru|сударь|m|tr=súdar’}}, {{t+|ru|господин|m|tr=gospodín}}, {{t+|ru|сэр|m|tr=ser}} {{qualifier|in translations from English}}
 * Spanish: {{t+|es|señor|m}}
 * Turkish: {{t+|tr|beyefendi}}
@@ -94,7 +94,6 @@ From {{etyl|enm|en}} {{term|sir|lang=enm}}, from {{etyl|fro|en}} {{term|sire||ma
 * {{ttbc|it}}: [[signore]] {{g|m}}
 {{trans-mid}}
 * {{ttbc|pt}}: [[senhor]] {{g|m}}
-* {{ttbc|ro}}: [[domn]] {{g|m}} (1), [[domnule]] ''(vocative form of domn)'' {{g|m}} (3)
 * {{ttbc|sk}}: [[pán]] {{g|m}}, [[pane]] ''m vocative''
 * {{ttbc|es}}: [[señor]] {{g|m}}
 {{trans-bottom}}
