/* English */ ===Noun===  {{en-noun}}    # The act of something that trickles.  #: ''the '''tricklings''' of water down the cave walls'' <trickling#25834122>

--- a/en/t/trickling.720060.wikitext
+++ b/en/t/trickling.720060.wikitext
@@ -5,6 +5,12 @@
 
 # {{present participle of|trickle}}
 
+===Noun===
+{{en-noun}}
+
+# The act of something that trickles.
+#: ''the '''tricklings''' of water down the cave walls''
+
 [[de:trickling]]
 [[fr:trickling]]
 [[ml:trickling]]
