/* Translations */ - Added the sense "tomar conta de", + pt translation. <seize#25838312>

--- a/en/s/seize.26061.wikitext
+++ b/en/s/seize.26061.wikitext
@@ -93,6 +93,10 @@ Earlier {{term|seise|lang=en}}, from {{etyl|enm|en}} {{term|seisen|lang=enm}}, {
 {{trans-mid}}
 * Portuguese: {{t+|pt|apreender}}
 {{trans-bottom}}
+{{trans-top|to have a sudden and powerful effect upon}}
+{{trans-mid}}
+* Portuguese: {{t+|pt|tomar conta de}}
+{{trans-bottom}}
 
 ===References===
 <references/>
