--- a/en/s/seize.26061.wikitext
+++ b/en/s/seize.26061.wikitext
@@ -86,7 +86,7 @@ Earlier {{term|seise|lang=en}}, from {{etyl|enm|en}} {{term|seisen|lang=enm}}, {
 {{trans-mid}}
 * Latin: {{t|la|carpo}}
 * Norwegian: {{t|no|gripe}}
-* Portuguese: {{t+|pt|aproveitar}}
+* Portuguese: {{t+|pt|aproveitar}}, {{t|pt|valer-se de}}
 * Spanish: {{t+|es|tomar}}, {{t+|es|aprovechar|alt=aprovercharse de}}
 {{trans-bottom}}
 {{trans-top|take possession of (by force, law etc)}}
