/* Translations */ - Added the sense "to have a seizure" + 4 pt translations. <seize#25838552>

--- a/en/s/seize.26061.wikitext
+++ b/en/s/seize.26061.wikitext
@@ -97,6 +97,10 @@ Earlier {{term|seise|lang=en}}, from {{etyl|enm|en}} {{term|seisen|lang=enm}}, {
 {{trans-mid}}
 * Portuguese: {{t+|pt|tomar conta de}}, {{t|pt|apoderar-se de}}
 {{trans-bottom}}
+{{trans-top|to have a seizure}}
+{{trans-mid}}
+* Portuguese: {{t+|pt|convulsionar}}, {{t+|pt|convulsionar-se}}, {{t+|pt|convulsar}}, {{t+|pt|convelir}},
+{{trans-bottom}}
 
 ===References===
 <references/>
