--- a/en/c/cop.26062.wikitext
+++ b/en/c/cop.26062.wikitext
@@ -39,6 +39,7 @@ Possibly from {{etyl|frm|en}} {{term|capere||to capture|lang=frm}}, from {{etyl|
 * Bulgarian: {{t+|bg|хващам|sc=Cyrl}}, {{t+|bg|пипвам|sc=Cyrl}}, {{t+|bg|арестувам|sc=Cyrl}}
 * Greek: {{t+|el|παίρνω|tr=paírno|sc=Grek}}
 {{trans-mid}}
+* Italian: {{t+|it|afferrare}}, {{t+|it|prendere}}, {{t|it|catturare}}
 * Russian: {{t+|ru|схватить|tr=sxvatítʹ|sc=Cyrl}}
 {{trans-bottom}}
 
